--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "postinstall": "prisma generate"
-
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8"
